[package]
name = "microbit_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
panic-halt = "0.2.0"
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# defmt-rtt = "0.4"
# defmt = "0.3.1"

[dependencies.microbit]
version = "0.13.0"
optional = true

[features]
v1=["microbit"]